package aula05.exercicio;

public enum Senioridade {
    ESTAGIARIO,
    JUNIOR,
    PLENO,
    SENIOR
}